--------------------------------------------------------------------------------------------------
Release notes version 1.7.2_beta : Enhancements, modifications and corrected bugs since version 1.7.1 :
-------------------------------------------------------------------------------------------------
13/11/15 (TRUST)  Portability : Released version of mpich upgrated to 3.1.4
06/11/15 (TRUST)  Bug fixed   : Diagonal preconditionning is fixed with periodic BC (it is OK for a parallel calculation)
04/11/15 (TRUST)  Portability : Compiler clang 3.7.0 supported
04/11/15 (Tools)  Portability : Released version of Gmsh upgrated to 2.10.1
04/11/15 (Kernel) Portability : MEDCoupling updated to 770 version
21/10/15 (Kernel) Minor change: Option -disable-tcl_tk added to the Kernel/TRUST configure tool (Do not detect/install the GUI Tcl/Tk librairy)
14/10/15 (Kernel) Minor change: Option -disable-mpiio added to the Kernel/TRUST configure tool (Do not use MPI-IO mode for writing of .xyz binary output file)
08/10/15 (TRUST)  Major change: With resume_last_time keyword in .data, tinit is set to last_time of saved files
05/10/15 (Kernel) Minor change: Option -without-doc added to the Kernel/TRUST configure tool (Do not build the documentation)
03/10/15 (TRUST)  Minor change: Update TRUST tutorial in latex version and its solutions
02/10/15 (TRUST)  New feature : Ability to use the chsom option of Sondes keyword with a Champ_Fonc_P1NC (eg moyenne_temperature)
01/10/15 (Tools)  Portability : Released version of Gnuplot is upgraded to 4.6.6
23/09/15 (Kernel) Minor change: Diagonal preconditionning is unavailable for a parallel calculation, the CG used to solve the implicitation of the equation diffusion operator can not preconditioned
17/08/15 (TRUST)  Bug fixed   : Correct the calculation of K for 2D in Boundary_field_uniform_keps_from_ud and Field_uniform_keps_from_ud
18/06/15 (TRUST)  Major change: Trio_U code becomes TRUST platform + TrioCFD baltilk