@@ -314,17 +314,20 @@ fi
 ##################
 # Configure nedit:
 ##################
-Language_mode_TRUST.sh -no_verbose
+# Desormais ce n est plus fait automatiquement cf  trust -config nedit
+#Language_mode_TRUST.sh -no_verbose
 
 ################
 # Configure vim:
 ################
-configure_vim.sh
+# Desormais ce n est plus fait automatiquement cf trust -config vim
+#configure_vim.sh
 
 ##################
 # Configure emacs:
 ##################
-configure_emacs.sh
+# Desormais ce n est plus fait automatiquement cf trust -config emacs
+#configure_emacs.sh
 
 ####################################################################
 # On verifie que l'environnement est a jour par rapport a la machine
