@@ -1477,7 +1477,7 @@ fi
 ########################
 # Installation de Salome
 ########################
-version_salome=7.4.0
+version_salome=7.6.0
 if [ $TRUST_DOWNLOAD_SALOME = 1 ]
 then
    version_salome_=`echo $version_salome | awk '{gsub("\\\.","_",$0);print $0}'`
