@@ -1,6 +1,11 @@
 --------------------------------------------------------------------------------------------------
 Release notes version 1.7.2_beta : Enhancements, modifications and corrected bugs since version 1.7.1 :
 -------------------------------------------------------------------------------------------------
+25/10/15 (TRUST)  Minor change: Option -config added to the trust script (Configure nedit, vim or emacs editor with keywords TRUST)
+20/11/15 (Kernel) New keyword : New keyword champ_front_pression_from_u + boundary_field_inward normal_value (function of time)
+20/11/15 (Kernel) New keyword : Add quiet option to SolveurSys
+20/11/15 (TRUST)  New feature : Add of a column corresponding to ||TAU||_2 before |TAUx| in ***Ustar.face (turbulence model)
+20/11/15 (TRUST)  New keyword : Add of a keyword dt_impr_ustar_mean_only to have means on boundaries in a NameTest_NamePb_ustar_mean_only.out file
 13/11/15 (TRUST)  Portability : Released version of mpich upgrated to 3.1.4
 06/11/15 (TRUST)  Bug fixed   : Diagonal preconditionning is fixed with periodic BC (it is OK for a parallel calculation)
 04/11/15 (TRUST)  Portability : Compiler clang 3.7.0 supported
